# RGV_Simulation

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
.github/workflows/: deploy.yml
openspec/changes/archive/2026-04-01-rgv-simulation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-02-ux-layout-overhaul/: proposal.md
openspec/changes/archive/2026-04-10-simulation-layout/: proposal.md  tasks.md
openspec/changes/archive/2026-04-10-storage-bulk-edit/: proposal.md  tasks.md
openspec/changes/archive/2026-04-10-storage-size/: proposal.md  tasks.md
openspec/changes/archive/2026-04-10-ux-polish/: tasks.md
openspec/changes/tauri-desktop-app/: design.md  proposal.md  tasks.md
openspec/changes/tauri-desktop-app/specs/tauri-shell/: spec.md
openspec/specs/rgv-config/: spec.md
openspec/specs/storage-management/: spec.md
openspec/specs/time-calculation/: spec.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AnimationControls.tsx  AxisParams.tsx  HistoryLog.tsx  NumberInput.tsx  RGVConfig.tsx  SideViewSVG.tsx  SimView3D.tsx  StorageCard.tsx  StorageManager.tsx  StorageModal.tsx  TaskPanel.tsx  TimeBreakdown.tsx  TopViewSVG.tsx  TrackConfig.tsx
src/context/: AppContext.tsx
src/hooks/: useAnimationPlayer.ts  useFlowAnimationPlayer.ts
src/lib/: timeCalculator.test.ts  timeCalculator.ts
src/types/: index.ts
(+4 files in other folders)
